--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,9 @@
-<<<<<<< HEAD
-=======
-streamlit>=1.28.0
->>>>>>> ee45dcd8700c8dc8308cf0b5be93a2db567d744f
-pandas>=1.5.0
-numpy>=1.21.0
-matplotlib>=3.5.0
-seaborn>=0.11.0
-<<<<<<< HEAD
-scikit-learn>=1.0.0
-plotly>=5.0.0
-statsmodels>=0.13.0
-scipy>=1.7.0
-factor-analyzer>=0.4.0
-jupyter>=1.0.0
-notebook>=6.0.0
-ipykernel>=6.0.0
-=======
-plotly>=5.10.0
-scikit-learn>=1.0.0
->>>>>>> ee45dcd8700c8dc8308cf0b5be93a2db567d744f
+pandas==2.0.3
+numpy==1.24.3
+matplotlib==3.7.2
+seaborn==0.12.2
+plotly==5.15.0
+scipy==1.11.1
+scikit-learn==1.3.0
+factor-analyzer==0.4.1
+tensorflow==2.13.0
